# beak

./: .gitignore  AGENTS.md  LICENSE  README.md  icon.ai  pyproject.toml  setup.py
beak.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
beak/remote/: beak_env.yml
beamkit.egg-info/: PKG-INFO  SOURCES.txt
beamkit/alignments/: utils.py
beamkit/remote/: test-esm.ipynb  utils.py
misc/: Beak-Introduction.key
notebooks/examples/: test-alignments.ipynb  test-esm.ipynb  test-remote.ipynb
src/beak/: __init__.py  config.py  embeddings.py  interplm.py  sequence.py  temperature.py  traits.py  utils.py  viz.py  viz_backup.py
src/beak/alignments/: __init__.py  cache.py  conservation.py  formatting.py  test-alignments.ipynb  utils.py
src/beak/analysis/: __init__.py  comparative.py
src/beak/api/: __init__.py  structures.py  uniprot.py
src/beak/cli/: __init__.py  _common.py  commands.py  config.py  display.py  foldseek.py  jobs.py  main.py  pfam.py  project.py  setup.py  structures.py  submit.py  theme.py  ui.py
src/beak/datasets/: __init__.py  loaders.py
src/beak/project/: __init__.py  manifest.py  project.py
src/beak/remote/: __init__.py  align.py  base.py  embeddings.py  foldseek.py  hmmer.py  interactive.py  interplm_concepts.py  naming.py  pipeline.py  pipeline_scripts.py  projects.py  remote_setup.md  search.py  session.py  taxonomy.py  test-remote.ipynb  utils.py
src/beak/structures/: __init__.py  features.py  foldseek.py  mapping.py
src/beak/tui/: __init__.py  app.py  comparative.py  conservation.py  structure.py  taxonomy.py  traits.py
src/beak/viz/: __init__.py  alignments.py  (+3 more)
tests/: test_align_cmds.py  test_alignments.py  test_cli.py  test_config.py  test_conservation.py  test_display.py  test_embeddings_backend_dispatch.py  test_embeddings_checkpoint.py  test_embeddings_loader.py  test_embeddings_pca.py  test_fasta_stats.py  test_foldseek.py  test_hit_taxonomy.py  test_hmmer_parser.py  test_jobs_db_recovery.py  test_manifest_atomic.py  test_pfam.py  test_pipeline_chain_resolve.py  test_pipeline_scripts.py  test_remote_atomic.py  test_runtime_and_wait.py  test_screen_attribute_collisions.py  test_sequence_view_on_click.py  test_source_job_resolve.py  test_status_inference.py  test_structure_cache.py  test_structures_api.py  test_structures_features.py  test_structures_mapping.py  test_taxonomic_builder.py  test_taxonomic_clustering.py  test_taxonomy_parser.py  test_temperature_annotation.py  test_uniprot_api.py  test_utils.py
tutorials/: Annotation.ipynb  Embeddings.ipynb  Pipelines.ipynb  Search.ipynb
(+38 files in other folders)
